[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/QuestionBox.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.00392157, 0.00392157, 0.00392157, 0.254902 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.231373, 0.219608, 0.219608, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.0156863, 0.0156863, 0.0156863, 1 )

[node name="QuestionBox" type="CanvasLayer"]
pause_mode = 2
visible = false
script = ExtResource( 1 )

[node name="Overlay" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )

[node name="QuestionContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="PanelContainer" type="PanelContainer" parent="QuestionContainer"]
margin_left = 189.0
margin_top = 93.0
margin_right = 195.0
margin_bottom = 99.0
custom_styles/panel = SubResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="QuestionContainer/PanelContainer"]
margin_left = 3.0
margin_top = 3.0
margin_right = 267.0
margin_bottom = 99.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="Rows" type="VBoxContainer" parent="QuestionContainer/PanelContainer/MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 259.0
margin_bottom = 91.0

[node name="Label" type="Label" parent="QuestionContainer/PanelContainer/MarginContainer/Rows"]
margin_right = 254.0
margin_bottom = 14.0
text = "Qual palavra est√° escrita corretamente?"

[node name="Blue_button" type="Button" parent="QuestionContainer/PanelContainer/MarginContainer/Rows"]
margin_top = 18.0
margin_right = 254.0
margin_bottom = 38.0
custom_colors/font_color_disabled = Color( 0.0117647, 0.329412, 0.870588, 1 )
custom_colors/font_color_focus = Color( 0.0117647, 0.329412, 0.870588, 1 )
custom_colors/font_color = Color( 0.0117647, 0.329412, 0.870588, 1 )
action_mode = 0
text = "ASSERTAR"

[node name="Yellow_button" type="Button" parent="QuestionContainer/PanelContainer/MarginContainer/Rows"]
margin_top = 42.0
margin_right = 254.0
margin_bottom = 62.0
custom_colors/font_color = Color( 0.8, 0.752941, 0.027451, 1 )
action_mode = 0
text = "COMESSAR"

[node name="Green_button" type="Button" parent="QuestionContainer/PanelContainer/MarginContainer/Rows"]
margin_top = 66.0
margin_right = 254.0
margin_bottom = 86.0
custom_colors/font_color = Color( 0.0901961, 0.556863, 0.0235294, 1 )
action_mode = 0
text = "ARREMESSAR"

[connection signal="pressed" from="QuestionContainer/PanelContainer/MarginContainer/Rows/Blue_button" to="." method="_on_Blue_button_pressed"]
[connection signal="pressed" from="QuestionContainer/PanelContainer/MarginContainer/Rows/Yellow_button" to="." method="_on_Yellow_button_pressed"]
[connection signal="pressed" from="QuestionContainer/PanelContainer/MarginContainer/Rows/Green_button" to="." method="_on_Green_button_pressed"]
